--- a/contrib/Distribution/ProfilingConfigs/FixedCalls_20K_Config.json
+++ b/contrib/Distribution/ProfilingConfigs/FixedCalls_20K_Config.json
@@ -1,7 +1,7 @@
 {
 	"Description": "This configuration performs profiling for a fixed number of calls. It collects data on the first 20K calls, and then stops.",
 	"OutFilepath": "FixedCalls_20K_Profile",
-	"MaxFilepathSuffix": "3",
+	"MaxFilepathSuffix": 3,
 	"MaxNumCalls": 20000,
 	"MaxNumSeconds": 0,
 	"WriteMode": 0
