binding papyrus functions (but not yet implemented)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(sources
         src/Settings.cpp
         src/ProfilingConfig.cpp
         src/ProfilingHook.cpp
+        src/Papyrus.cpp
         src/Main.cpp
 
         ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
